--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(221, 220, 220);
+  background-color: rgba(0, 0, 0, 0);
   font-family: Arial, sans-serif;
   text-align: center;
   background-size: cover;
@@ -9,20 +9,16 @@ body {
 
 h1 {
   color: rgb(0, 0, 0) !important;
-  /*text-shadow: 2px 1px 10px rgb(123, 122, 124); 
-  */
-  font-size: 3.7em;
-  padding: 5.5px;
-  border: 0.3rem outset rgb(0, 0, 0);
-  background-color: rgb(4, 0, 255);
-  border-radius: 10px;
-  
+  /*text-shadow: 2px 1px 10px rgb(123, 122, 124); */
+  font-size:3.7em;
+ /* background-color: rgba(0, 0, 0, 0);  This has no value atm.*/
+  border-bottom: 2.5px solid black;
 } 
 
 
 nav {
 
-border-bottom: 1.5px solid black;
+border-bottom: 2.5px solid black;
 padding: 5.0px;
 
 }
@@ -35,7 +31,7 @@ padding: 5.0px;
 .PR {
 color: #000000ad;
 padding: 5.5px;
-background-color: #3fca3ab4;
+background-color: #0bfc0373;
 transition:background-color 0.3s;
 font-family: 'Times New Roman', Times, serif;
 font-size: 25px;
@@ -47,7 +43,7 @@ text-shadow: 3px 3px 5px;
 }
 .PR:hover{
 
-background-color: #2bff00ab;
+background-color: #ffffff;
 
 
 }
@@ -113,7 +109,7 @@ iframe{
 }
 .p3{
 
-color: rgba(60, 255, 0, 0.74);
+color: rgb(37, 112, 14);
     background-color: rgba(0, 0, 0, 0.171);
     font-family: Georgia, 'Times New Roman', Times, serif;
 
