--- a/style_panelist.css
+++ b/style_panelist.css
@@ -1,11 +1,10 @@
 h1{
 text-align: center;
-border: solid;
-border-color: rgb(55, 40, 197);
-background-color: rgb(1, 152, 223);
-text-decoration-line: underline;
+border: 4px solid;
+border-color: rgb(0, 0, 0);
+border-radius: 15px;
 margin: 10.5px;
-text-shadow: 3px 3px 15px;
+font-size: 50px;
 
 }
 
@@ -16,12 +15,12 @@ text-shadow: 3px 3px 15px;
     font-size: 50px;
     display: inline-block;  /* Wraps around images and text*/
     border: 4px solid;
-    border-color: rgb(255, 255, 255);
+    border-color: rgba(255, 255, 255, 0.808);
     text-decoration-line: underline;
     text-align: center;
     background: rgb(0, 0, 0);
     border-radius: 25px;
-    
+    background-image: linear-gradient(to bottom, rgb(0, 0, 0), rgba(255, 254, 254, 0.849));
     
 }
 
