--- a/style_panelist.css
+++ b/style_panelist.css
@@ -1,5 +1,6 @@
 h1{
 text-align: center;
+border-bottom: 2.5px solid black;
 margin: 10.5px;
 font-size: 50px;
 
@@ -38,5 +39,6 @@ body {
   border-top: 0.3px solid black;
   text-align: center;
 }
+
 
 
