--- a/style.css
+++ b/style.css
@@ -6,7 +6,14 @@ body {
   background-image: url("Background.png");
 
 }
-
+.Video {
+filter:grayscale(1);
+width: 100%;
+height: 25%;
+border-radius: 15px;
+object-fit:cover;
+border:0.2rem outset rgb(0, 0, 0);
+}
 h1 {
   color:rgb(0, 0, 0) !important;
   /*text-shadow: 2px 1px 10px rgb(123, 122, 124); */
@@ -204,6 +211,7 @@ color: rgb(21, 255, 0);
 
 
 }
+
 
 
 
