--- a/style.css
+++ b/style.css
@@ -36,10 +36,9 @@ padding: 5.0px;
 }
 
 .PR {
-color: #000000ad;
+color: #000000;
 padding: 5.5px;
-background-color: #0084ff85;
-transition:background-color 0.3s;
+transition:background-color 0.4s;
 font-family: 'Times New Roman', Times, serif;
 font-size: 25px;
 margin: 0px 20.0px;
@@ -211,6 +210,7 @@ color: rgb(21, 255, 0);
 
 
 }
+
 
 
 
