--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ text-shadow: 3px 3px 5px;
 }
 .PR:hover{
 
-background-color: #ffffff;
+background-color: #bebebebe;
 
 
 }
@@ -210,6 +210,7 @@ color: rgb(21, 255, 0);
 
 
 }
+
 
 
 
