--- a/style.css
+++ b/style.css
@@ -7,12 +7,21 @@ body {
 
 }
 .Video {
-filter:grayscale(1);
-width: 100%;
-height: 35%;
-border-radius: 15px;
-object-fit:cover;
-border:0.2rem outset rgb(0, 0, 0);
+ position: relative;       /* REQUIRED */
+  width: 100%;
+  height: 60vh;             /* predictable height */
+  overflow: hidden;
+  filter: grayscale(1);
+}
+.video iframe {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 140%;
+  height: 140%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  border: none;
 }
 h1 {
   color:rgb(0, 0, 0) !important;
@@ -210,6 +219,7 @@ color: rgb(21, 255, 0);
 
 
 }
+
 
 
 
