--- a/style.css
+++ b/style.css
@@ -7,21 +7,24 @@ body {
 
 }
 .Video {
- position: relative;       /* REQUIRED */
   width: 100%;
-  height: 60vh;             /* predictable height */
+  height: 45vh;
   overflow: hidden;
+  position: relative;
   filter: grayscale(1);
 }
-.video iframe {
+
+.Video iframe {
   position: absolute;
-  top: 75%;
+  top: 50%;
   left: 50%;
-  width: 140%;
-  height: 140%;
+
+  width: 177.77vh; /* 16:9 ratio trick */
+  height: 100vh;
+
   transform: translate(-50%, -50%);
+  border: 0;
   pointer-events: none;
-  border: none;
 }
 h1 {
   color:rgb(0, 0, 0) !important;
@@ -219,6 +222,7 @@ color: rgb(21, 255, 0);
 
 
 }
+
 
 
 
